--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en,id" class="no-js" translate="no">
 <head>
 	<title>Disable Developer Tools on all your Browser and deadlock injection browser.</title>
-	 
+	<script src="index.js"></script>
 </head>
 <body>
 Hello world wide......
