--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en,id" class="no-js" translate="no">
+<html lang="en,id,uk,ru" class="no-js" translate="no">
 <head>
 	<title>Disable Developer Tools on all your Browser and deadlock injection browser.</title>
 	<script src="index.js"></script>
